# hackathon-aixlaw

./: Makefile  README.md  app.py  criteria.txt  pyproject.toml  requirements.txt  test.ipynb  test.json  test.py
markdown/: sample.md
schema/: models.py
scripts/: compare.py  ingest.py
services/: chunks.py  convert.py  document.py  embedding.py  image.py  nougart.py
services/langchain/: agents.py  chains.py  pande.py  templates.py  tools.py
services/nodes/: convert.py
streamlit/: main.py
web/: app.py  requirements.txt
