[tool.poetry]
name = "hackathon"
version = "0.1.0"
description = ""
authors = ["Jordan Parker <jordanhparker6@gmail.com>"]
readme = "README.md"
# packages = [{ include = "hackathon_aixlaw" }]

[tool.poetry.dependencies]
python = "^3.10"
structlog = "^23.1.0"
python-dotenv = "^1.0.0"
openai = "^0.28.0"
langchain = "^0.0.285"
httpx = "^0.24.1"
langchain-experimental = "^0.0.17"
pydantic = "^1.10.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
