[tool.poetry]
name = "hackathon"
version = "0.1.0"
description = ""
authors = ["Jordan Parker <jordanhparker6@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
structlog = "^23.1.0"
python-dotenv = "^1.0.0"
openai = "^0.28.0"
langchain = "^0.0.285"
langchain-experimental = "^0.0.17"
httpx = "^0.24.1"
pydantic = "^1.10.5"
streamlit = "^1.27.0"
pymupdf = "^1.23.3"
rich = "^13.5.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
